debbuging viewport bug on mobile

--- a/styles/pages/_thisweek.scss
+++ b/styles/pages/_thisweek.scss
@@ -38,6 +38,8 @@
   }
   @media screen and (max-width: 1200px) {
     position: relative;
+    max-width: 100%;
+    height: auto;
   }
   
   
