--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,7 +53,7 @@ body, html {
   height: auto;
   font-family: 'Josefin Sans', sans-serif;
   font-weight: lighter;
-
+  width: 100%;
 
 
   strong {font-weight: bold;}
@@ -119,7 +119,7 @@ body, html {
 
 
 main {
-  
+  width: 100%;
   height: 100%; //make sure to cover the screen 
   background-color: $light-primary-color ; // need a solid bg to hide the footer 
   position: relative; // put on top 
@@ -135,8 +135,8 @@ main {
 
 main.container { 
   
-  @media screen and (min-width: 1000px) {padding: 35px;}
-  @media screen and (max-width: 1000px) {padding: 10px;}
+  @media screen and (min-width: 1000px) {padding: 35px; width: 100%;}
+  @media screen and (max-width: 1000px) {padding: 10px; width: 100%;}
 }
 
 main.container.traiteur {
